--- a/.gitignore
+++ b/.gitignore
@@ -25,14 +25,14 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
+# Lock files (use pnpm)
+package-lock.json
+yarn.lock
+
 # Environment
 .env
 .env.local
 .env.*.local
-
-# Package manager (optional - uncomment if needed)
-# yarn.lock
-# pnpm-lock.yaml
 
 # Testing
 coverage/
